--- a/index.css
+++ b/index.css
@@ -265,3 +265,6 @@ font-size: 48px;
     height: 20px;
     color: #502314;
 }
+.r-pcfamy{
+    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+}
